# keibaAI

./: .gitignore  README.md  middleware.ts  pyproject.toml
.github/workflows/: fetch_cache_bundle.yml
data/incoming/: README.md
data/jobs/: fetch_job_job_20260618_120030.csv  fetch_job_job_20260618_120030.json  fetch_job_job_20260618_172258.csv  fetch_job_job_20260618_172258.json  fetch_job_job_20260618_181840.csv  fetch_job_job_20260618_181840.json  fetch_job_job_20260618_191957_p01.csv  fetch_job_job_20260618_191957_p01.json  (+278 more)
docs/: append_data_workflow.md  batch_management.md  browser_fetch_backend.md  bulk_fetch_job_workflow.md  cache_bundle_workflow.md  data_entry_guide.md  data_fetch_workflow.md  dataset_quality_report_500.md  dataset_snapshot_500.md  dataset_status.md  fetch_backend_strategy.md  fetch_network_issue.md  fetch_runner_plan.md  large_scale_data_plan.md  odds_data_policy.md  odds_manual_check_10.md  odds_manual_check_needs_26.md  odds_missing_investigation_500.md  recora-product-truth.md
ops/: dispatch_fetch_jobs.ps1  download_fetch_artifacts.ps1  process_cache_bundle_jobs.py  run_bulk_fetch_cycle.ps1
src/nankan_ai/: schema.py  (+23 more)
tests/: test_append_batch_log.py  test_append_pipeline.py  test_audit_dataset.py  test_audit_missing_odds.py  test_cache_bundle_workflow.py  test_diagnose_network_access.py  test_fetch_backends.py  test_fetch_plan.py  test_import_manual_html_cache.py  test_nankan_bulk_job_planner.py  test_nankan_bulk_wave_runner.py  test_nankan_dataset_manifest.py  test_nankan_pipeline.py  test_parse_result_pages.py  test_validate_csv.py
(+3 files in other folders)
